# TEST-CRM

./: .gitignore  Dockerfile  README.md  expenses_.db  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/components/: hero.tsx
frontend/src/pages/: Home.tsx
src/: .env  main.py
src/core/: config.py  mail.py
src/db/: models.py  session.py
src/routers/: auth_cookies.py
