[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava",email = "nepejcevslava@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.120.4)",
    "uvicorn (==0.38.0)",
    "pandas (==2.3.3)",
    "sqlalchemy (==2.0.44)",
    "redis (==7.0.1)",
    "aiosqlite (==0.21.0)",
    "passlib (==1.7.4)",
    "aiosmtplib (==5.0.0)",
    "annotated-doc (==0.0.3)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==25.1.0)",
    "bcrypt (==4.0.1)",
    "cffi (==2.0.0)",
    "click (==8.3.0)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "numpy (==2.3.4)",
    "pycparser (==2.23)",
    "pydantic (==2.12.3)",
    "pydantic-core (==2.41.4)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.2.1)",
    "pytz (==2025.2)",
    "setuptools (==80.9.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "starlette (==0.49.3)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "wheel (==0.45.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
